--- a/apps/platform/globals.css
+++ b/apps/platform/globals.css
@@ -83,8 +83,13 @@ select {
 }
 
 body,
-html {
+html{
   height: 100%;
+}
+
+body,
+html, * {
+  /* height: 100%; */
   scroll-behavior: smooth;
 }
 
@@ -93,13 +98,13 @@ html {
 }
 
 .at-least-2-lines {
-  line-height: 1.5; /* Sets the height of each line */
-  min-height: calc(1.5em * 2); /* 3 is the minimum number of lines */
-  overflow: hidden; /* Prevents content overflow */
+  line-height: 1.5;
+  min-height: calc(1.5em * 2); 
+  overflow: hidden; 
 }
 
 .at-least-3-lines {
-  line-height: 1.5; /* Sets the height of each line */
-  min-height: calc(1.5em * 3); /* 3 is the minimum number of lines */
-  overflow: hidden; /* Prevents content overflow */
+  line-height: 1.5;
+  min-height: calc(1.5em * 3); 
+  overflow: hidden; 
 }
